.kube/csr-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csr-api-deployment
  labels:
    app: csr-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csr-api
  template:
    metadata:
      labels:
        app: csr-api
    spec:
      volumes:
        - name: csr-pv-storage
          persistentVolumeClaim:
            claimName: csr-pv-claim
      containers:
        - name: csr-api
          image: benedick/csr-api:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            limits:
              nvidia.com/mig-2g.10gb: 1
            requests:
              cpu: 4
          volumeMounts:
            - mountPath: "/usr/share/sqlite/"
              name: csr-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: csr-api-service
spec:
  selector:
    app: csr-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
