.kube/csr-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csr-frontend-deployment
  labels:
    app: csr-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csr-frontend
  template:
    metadata:
      labels:
        app: csr-frontend
    spec:
      containers:
        - name: csr-frontend
          image: benedick/csr-frontend:latest
          ports:
            - containerPort: 80
          imagePullPolicy: "Always"
---
apiVersion: v1
kind: Service
metadata:
  name: csr-frontend-service
spec:
  selector:
    app: csr-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
