.kube/csr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: csr-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: URL
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: csr-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend: 
              service: 
                name: csr-api-service
                port: 
                  number: 80
